[package]
name = "tp2p"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.15"
rmp-serde = "0.14.4"
serde = "1.0.117"
serde_derive = "1.0.117"
sodiumoxide = "0.2.6"
thiserror = "1.0"

[dev-dependencies]
async-std = "1.9.0"

