[package]
name = "tp2p"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
edition = "2021"

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.10.2"
getset = "0.1.1"
rmp-serde = "0.14.4"
serde = "1.0.117"
serde_derive = "1.0.117"
sodiumoxide = { path = "../sodiumoxide" }
tracing = "0.1"
thiserror = "1.0"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
bytes = "1.0.1"
futures = "0.3.15"

